--- a/light/.gitignore
+++ b/light/.gitignore
@@ -34,3 +34,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# data 
+light/src/app/data/original_pdf/
+light/src/app/data/text_file/
+light/src/app/data/extract.py
+light/src/app/data/modified_text/
+
