--- a/light/package.json
+++ b/light/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "clsx": "^2.1.0",
     "lucide-react": "^0.372.0",
-    "next": "14.2.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.2",
+    "radix-ui": "^1.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
